--- a/about.qmd
+++ b/about.qmd
@@ -3,7 +3,7 @@ title: Meet the team
 author: ""
 ---
 
-This project was developed by **{the-pipe-operators}** For [STA 199: Introduction to Data Science](https://sta199-f25.github.io/) at Duke University.
+This project was developed by **the-pipe-operators** For [STA 199: Introduction to Data Science](https://sta199-f25.github.io/) at Duke University.
 The team is comprised of the following team members.
 
 -   Sriya: One sentence description of Team member 1 (e.g., year, major, etc.). Optionally,  hyperlink the team name to homepage or social profile (LinkedIn, etc.)  of team member.
