--- a/proposal.qmd
+++ b/proposal.qmd
@@ -46,11 +46,11 @@ The source of the data is the UC Irvine Machine Learning Repository. The data wa
 
 ## Research question
 
--   A well formulated research question. (You may include more than one research question if you want to receive feedback on different ideas for your project. However, one per data set is required.)
+Do demographical factors such as age, sex, home, parental status, and parental education impact student performance in math in the Portugueuse schools of Gabriel Pereira and Mousinho da Silveira? Or are factors such as study time, school travel time, educational support, and paid class time more influential?
 
--   A description of the research topic along with a concise statement of your hypotheses on this topic.
+The research topic is what topics are most influential in educational performance on math, home characteristics or study time and study resources. There may be some overlap between the two, as certain factors may lead to more or less study time. Therefore, we also want to explore the relationship between the two. Our hypothesis is that study time and educational support are more influential n mathematic educational performance. 
 
--   Identify the types of variables in your research question. Categorical? Numerical?
+The types of variable present include numerical variables such as age, study time, school travel time, paid class versus categorical and binary variables in parental status, home, sex, parental education, and educational support. 
 
 ## Glimpse of data
 
