--- a/about.qmd
+++ b/about.qmd
@@ -6,8 +6,7 @@ author: "Srilakshmi Venkatesan, Sriya Sridhar, Ryan Lee, Daniel Murong"
 This project was developed by **the-pipe-operators** For [STA 199: Introduction to Data Science](https://sta199-f25.github.io/) at Duke University.
 The team is comprised of the following team members.
 
--   Sriya: One sentence description of Team member 1 (e.g., year, major, etc.). Optionally,  hyperlink the team name to homepage or social profile (LinkedIn, etc.)  of team member.
--   Team member 2: One sentence description of Team member 2 (e.g., year, major, etc.). Optionally,  hyperlink the team name to homepage or social profile (LinkedIn, etc.)  of team member.
--   Team member 3: One sentence description of Team member 3 (e.g., year, major, etc.). Optionally,  hyperlink the team name to homepage or social profile (LinkedIn, etc.)  of team member.
--   Team member 4: One sentence description of Team member 4 (e.g., year, major, etc.). Optionally,  hyperlink the team name to homepage or social profile (LinkedIn, etc.)  of team member.
--   ...
+-   Sriya Sridhar is a sophomore majoring in neuroscience.
+-   Srilakshmi Venkatesan is a sophomore majoring in neuroscience.
+-   Daniel Murong is a sophomore majoring in computer science.
+-   Ryan Lee is a sophomore majoring in biology.
