Added details of the airports included in and date ranges for the dataset. Added motivating reasons for the research question, close #1

--- a/proposal.qmd
+++ b/proposal.qmd
@@ -14,15 +14,18 @@ library(readxl)
 
 ## Introduction and data
 
-  The airlines dataset is from the CORGIS Dataset Project. The data was originally collected by the Bureau of Transportation Statistics. This dataset was curated by Austin Cory Bart. Each observation is on an airport on a given date with variables including the number of delays and cancellations attributed to a certain event, such as meteorological conditions. No ethical concerns are identified for this dataset.
+  The airlines dataset is from the CORGIS Dataset Project. The data was originally collected by the Bureau of Transportation Statistics. This dataset was curated by Austin Cory Bart, and it includes 29 airports, including ATL and JFK, with dates ranging from June 2003 to January 2016. Each observation is on an airport on a given date with variables including the number of delays and cancellations attributed to a certain event, such as meteorological conditions. No ethical concerns are identified for this dataset.
 
 ## Research question
 
   What is the trend of delays/cancellations throughout the year and what are common predictors of those?
 
   The research topic focuses on how the number of delays/cancellations change throughout the year depending on the month.
-    In addition, it focuses on the causation behind the delays/cancellations.
-    We predict that delays/cancellations are greater around the winter months due to the weather, and around the holiday season due to the volume of travelers.
+  In addition, it focuses on the causation behind the delays/cancellations.
+  
+  We believe that understanding the trends in the number of delays/cancellations and the most prominent causes of them will help airports reduce the number of cancellations by preparing for seasons with higher numbers of delays/cancellations and by targeting the most imperative causes.
+  
+  We predict that delays/cancellations are greater around the winter months due to the weather, and around the holiday season due to the volume of travelers.
 
   The categorical variables in our research question are the predictors of cancellations, such as weather and year/month.
     The numerical variables in our research question are the number of delays due to factors such as weather or security.
