--- a/eda.qmd
+++ b/eda.qmd
@@ -30,3 +30,28 @@ ggplot(edu_achievement, aes(x = failures, y=G3)) +
 ggplot(edu_achievement, aes(x = ))
 ```
 
+```{r}
+#| label: medu-g3-plot
+ggplot(edu_achievement, aes(x = Medu, y = G3)) + 
+  geom_point() + 
+  geom_smooth(method = "lm") + 
+  labs(
+    x = "Mother’s Education Level",
+    y = "Final Grade (1-20)",
+    title = "Final Grade of Students Based on Mother’s Education Level",
+    subtitle = "Student Serformance in Math in the Portugueuse schools of 
+Gabriel Pereira and Mousinho da Silveira"
+  )
+
+ggplot(edu_achievement, aes(x = Fedu, y = G3)) + 
+  geom_point() + 
+  geom_smooth(method = "lm") + 
+  labs(
+    x = "Father’s Education Level",
+    y = "Final Grade (1-20)",
+    title = "Final Grade of Students Based on Father’s Education Level",
+    subtitle = "Student Serformance in Math in the Portugueuse schools of 
+Gabriel Pereira and Mousinho da Silveira"
+  )
+```
+
