--- a/about.qmd
+++ b/about.qmd
@@ -5,10 +5,10 @@ title: Meet the team
 This project was developed by **the-pipe-operators** For [STA 199: Introduction to Data Science](https://sta199-f25.github.io/) at Duke University.
 The team is comprised of the following team members.
 
--   Sriya: Sriya Sridhar is a sophomore majoring in neuroscience. 
+-   Sriya Sridhar: A sophomore majoring in neuroscience. 
 
--   Srilakshmi: Srilakshmi Venkatesan is a sophomore majoring in neuroscience. 
+-   Srilakshmi Venkatesan: A sophomore majoring in neuroscience. 
 
--   Daniel: Daniel Murong is a sophomore majoring in computer science. 
+-   Daniel Murong: A sophomore majoring in computer science. 
 
--   Ryan: Ryan Lee is a sophomore majoring in biology.
+-   Ryan Lee: A sophomore majoring in biology.
