--- a/eda.qmd
+++ b/eda.qmd
@@ -116,6 +116,18 @@ ggplot(edu_achievement, aes(x = health, y = G3)) +
   theme_minimal(base_size = 14)
 ```
 
+```{r}
+ggplot(edu_achievement, aes(x = famrel, y = G3)) +
+  geom_point(alpha = 0.6) +
+  geom_smooth(method = "lm") +
+  labs(
+    title = "Relationship Between Family Relationship Quality and Final Grade (G3)",
+    x = "Family Relationship Quality (1 = Very Bad, 5 = Excellent)",
+    y = "Final Grade (G3)"
+  ) +
+  theme_minimal(base_size = 14)
+```
+
 
 ```{r}
 #| label: fig-paid-g3
