--- a/eda.qmd
+++ b/eda.qmd
@@ -31,8 +31,10 @@ edu_achievement_longer <- edu_achievement |>
 ```
 
 @fig-g3-failures highlights differences in medians of students' final grades across the number of past class fails they have.
+
 ```{r}
 #| label: fig-g3-failures
+#| layout-ncol: 2
 #| fig-cap: Final Grade vs. Number of Past Class Failures
 ggplot(edu_achievement, aes(x = failures, y = G3, group = failures, color = failures)) +
   geom_boxplot() +
@@ -42,7 +44,49 @@ ggplot(edu_achievement, aes(x = failures, y = G3, group = failures, color = fail
     y = "Final Grade"
   ) +
   theme(legend.position = "none")
+
+ggplot(edu_achievement, aes(x = failures, y = G3)) +
+  geom_point() +
+  geom_smooth(method = "lm")
+  labs(
+    title = "Final Grade vs Number of Past Class Failures",
+    x = "Number of Past Class Failures",
+    y = "Final Grade"
+  )
 ```
+
+```{r}
+#| label: failures-summarize
+edu_achievement |>
+  group_by(failures) |>
+  summarize(
+    median = median(G3),
+    mean = mean(G3)
+  )
+```
+
+Based on the plots and the summary of median and mean values for final grades, we observe a weak, negative, linear relationship between the number of past class failures and the final grade.
+We will now determine the linear regression equation for final grade vs past class failures.
+
+```{r}
+#| label: g3-failures-lin-reg
+g3_failures_fit <- linear_reg() |>
+  fit(G3 ~ failures, data = edu_achievement)
+
+tidy(g3_failures_fit)
+```
+
+We get the following equation: $$\widehat{final~grade} = 11.16 - 2.22 \times failures$$
+
+```{r}
+#| label: r-r-squared
+edu_achievement |>
+  summarize(
+    r = cor(failures, G3),
+    r_squared = r^2
+  )
+```
+From the summary, we see that the correlation is weak, and the R-squared value is very low. The low R-squared indicates that the variability of final grades that the model can explain with the variable of past class failures is very low, only 13%. Thus, we deem the number of past class failures as a weak predictor/factor for math performance.
 
 ```{r}
 #| label: fig-wacl-dalc-g3
@@ -63,6 +107,21 @@ ggplot(aes(x = alc_lvl, y = G3, group = alc_lvl, color = alc_lvl)) +
   ) +
   theme(legend.position = "none")
 ```
+
+```{r}
+#| label: alc-summarize
+edu_achievement_longer |>
+  group_by(alc_lvl, alc_type) |>
+  summarize(
+    median = median(G3),
+    mean = mean(G3)
+  )
+```
+
+The faceted side-by-side boxplots and the summary show that the distributions of final grades for each combination of alcohol consumption type (weekday or weekend) and level all center at approximately 10-11.
+The variability seems to lower as alcohol consumption of either form increases.
+However, there does not appear to have any substantial changes in variability across the form of alcohol consumption.
+Since there are only very marginal observed changes due to changes in alcohol consumption type and level, alcohol consumption does not seem to be a strong factor for math performance.
 
 ```{r}
 #| label: fig-medu-g3
@@ -103,6 +162,7 @@ ggplot(edu_achievement, aes(x = internet, y = G3, fill = internet)) +
   theme(legend.position = "none")
 
 ```
+
 ```{r}
 #| label: health-g3-plot
 ggplot(edu_achievement, aes(x = health, y = G3)) +
@@ -128,14 +188,12 @@ ggplot(edu_achievement, aes(x = famrel, y = G3)) +
   theme_minimal(base_size = 14)
 ```
 
-
 ```{r}
 #| label: fig-paid-g3
 #| message: false
 ggplot(edu_achievement, aes(x = paid, y = G3)) +
   geom_boxplot()
 ```
-
 
 ```{r}
 #| label: fig-freetime-g3
@@ -216,7 +274,8 @@ glance(dem_model)
 glance(study_model)
 ```
 
-We observe from the p-values of the variables in the two models, that several of them are not statistically significant for fitting. We will examine new models with variables having p-values lower than 0.05 (5e-2).
+We observe from the p-values of the variables in the two models, that several of them are not statistically significant for fitting.
+We will examine new models with variables having p-values lower than 0.05 (5e-2).
 
 ```{r}
 #| label: reduced-dem-model
