--- a/eda.qmd
+++ b/eda.qmd
@@ -161,8 +161,16 @@ ggplot(edu_achievement, aes(x = internet, y = G3, fill = internet)) +
   theme_minimal(base_size = 14) +
   theme(legend.position = "none")
 
-```
+edu_achievement |>
+  group_by(internet) |>
+  summarize(
+    median = median(G3, na.rm = TRUE),
+    mean = mean(G3, na.rm = TRUE),
+    .groups = "drop"
+  )
 
+```
+Students with internet access had slightly higher average and median final grades.This suggests that internet access may provide academic advantages — possibly through easier access to online learning materials, homework help, or communication with teachers.
 ```{r}
 #| label: health-g3-plot
 ggplot(edu_achievement, aes(x = health, y = G3)) +
@@ -174,8 +182,16 @@ ggplot(edu_achievement, aes(x = health, y = G3)) +
     y = "Final Grade (G3)"
   ) +
   theme_minimal(base_size = 14)
-```
 
+edu_achievement |>
+  group_by(health) |>
+  summarize(
+    median = median(G3, na.rm = TRUE),
+    mean = mean(G3, na.rm = TRUE),
+    .groups = "drop"
+  )
+```
+There is a mild positive trend where students reporting better health (1–5 scale) tend to have slightly higher grades. The slope from the regression equation will likely be small but positive, suggesting that overall health may have a modest influence on academic outcomes.
 ```{r}
 ggplot(edu_achievement, aes(x = famrel, y = G3)) +
   geom_point(alpha = 0.6) +
@@ -186,8 +202,17 @@ ggplot(edu_achievement, aes(x = famrel, y = G3)) +
     y = "Final Grade (G3)"
   ) +
   theme_minimal(base_size = 14)
-```
 
+
+edu_achievement |>
+  group_by(famrel) |>
+  summarize(
+    median = median(G3, na.rm = TRUE),
+    mean = mean(G3, na.rm = TRUE),
+    .groups = "drop"
+  )
+```
+Family relationship strength shows a small, mostly stable pattern — students who report stronger family relationships have slightly higher grades on average. The regression may produce a weak positive slope, indicating potentially supportive effects of a positive home environment on academic achievement.
 ```{r}
 #| label: fig-paid-g3
 #| message: false
