--- a/index.qmd
+++ b/index.qmd
@@ -25,7 +25,7 @@ Three predictors were explored: internet access, health status, and family relat
 
 ## Analysis
 
-Add analysis section here.
+The analysis showed that students with better internet access, health, and stronger family relationships had better final grades
 
 ## Discussion
 
