--- a/index.qmd
+++ b/index.qmd
@@ -25,7 +25,11 @@ Three predictors were explored: internet access, health status, and family relat
 
 ## Analysis
 
-The analysis showed that students with better internet access, health, and stronger family relationships had better final grades
+ Students with internet access had a higher mean final grade (10.6) and median grade (11) than those without access (mean = 9.41, median = 10), suggesting that access to online resources may improve academic performance, by increasing accessibility to resources and supplemental practice.
+
+For health status, the mean final grade slightly increased from 10.0 at health = 3 to 10.4 at health = 5. Similarly, the median indicated that students who reported better health tended to perform slightly better academically. A linear regression confirmed a weak but positive association between health and final grades.
+
+Gor family relationship strength (famrel), mean grades ranged from 9.89 to 10.8, and median grades stayed around 10–11. This consistency suggests that while positive family relationships may contribute to emotional support, they do not strongly predict differences in final academic performance. 
 
 ## Discussion
 
